fix: git history viewer close button overlaps tab bar

--- a/src/extensions/default/Git/styles/git-styles.less
+++ b/src/extensions/default/Git/styles/git-styles.less
@@ -455,10 +455,8 @@
 
 #history-viewer {
     position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    inset: 0;
+    z-index: 2;
     overflow: hidden;
     background: @bc-panel-bg;
     .flex-box(column);
